--- a/kub/service.yaml
+++ b/kub/service.yaml
@@ -1,18 +1,18 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: dlv-service
-spec:
-  type: NodePort
-  selector:
-    app: dbg
-  ports:
-    - name: delve
-      port: 30123
-      targetPort: 30123
-      nodePort: 30200
-
----
+#apiVersion: v1
+#kind: Service
+#metadata:
+#  name: dlv-service
+#spec:
+#  type: NodePort
+#  selector:
+#    app: dbg
+#  ports:
+#    - name: delve
+#      port: 30123
+#      targetPort: 30123
+#      nodePort: 30200
+#
+#---
 
 apiVersion: v1
 kind: Service
